# delaunator-c

./: CMakeLists.txt  LICENSE  README.md
examples/bench/: CMakeLists.txt  bench.c
examples/poisson/: CMakeLists.txt  poisson.c
include/delaunay/: delaunator.h  delaunay.h  helper.h
src/: delaunator.c  delaunay.c
tests/: CMakeLists.txt
tests/bench/: CMakeLists.txt  bench.c
tests/poisson/: CMakeLists.txt  poisson.c
